refactor/ sequelize user & student and add docker
